# zombie-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
msr/: cli.py  config.py  schemas.py
msr/display/: renderer.py
msr/graph/: edges.py  graph.py  nodes.py
msr/orchestrator/: orchestrator.py
msr/planner/: planner.py
msr/router/: intent.py
msr/specialists/: base.py  code.py  factcheck.py  math.py  research.py  structured.py  summarize.py
msr/synthesizer/: synthesizer.py
msr/verifier/: verifier.py
tests/: smoke_e2e.py  smoke_orchestrator.py  smoke_planner.py  smoke_router.py  smoke_specialist.py  smoke_verifier.py
zli/: cli.py  config.py
zli/display/: renderer.py
zli/graph/: edges.py  graph.py  nodes.py
zli/orchestrator/: orchestrator.py
zli/planner/: planner.py
zli/router/: intent.py
zli/specialists/: base.py  code.py  factcheck.py  math.py  research.py  structured.py  summarize.py
zli/synthesizer/: synthesizer.py
zli/verifier/: verifier.py
